[gd_scene load_steps=29 format=4 uid="uid://tkfdjvhjr1ak"]

[ext_resource type="Texture2D" uid="uid://bew1gjq3gw3by" path="res://images/objets/petit_tapis.png" id="1_q8fnq"]
[ext_resource type="Script" uid="uid://cnm5p7imtopu7" path="res://scripts/grahics.gd" id="1_xkn22"]
[ext_resource type="Texture2D" uid="uid://dlif2ft3hck1v" path="res://images/objets/grand_tapis.png" id="2_8u11d"]
[ext_resource type="Texture2D" uid="uid://becjw0gsaaolm" path="res://images/SOL/milieu.png" id="3_u3qfv"]
[ext_resource type="Texture2D" uid="uid://x4rfw4pjiumt" path="res://images/SOL/mur.png" id="4_miur2"]
[ext_resource type="Texture2D" uid="uid://bqm07xplqtqfa" path="res://images/objets/tabouret.png" id="5_xkn22"]
[ext_resource type="Texture2D" uid="uid://670i8dul05w3" path="res://images/objets/lampe.png" id="6_55sy8"]
[ext_resource type="Texture2D" uid="uid://c6yk8tq1yorft" path="res://images/objets/table.png" id="6_kg6df"]
[ext_resource type="Texture2D" uid="uid://xvcjx35tca1k" path="res://images/objets/pouf.png" id="7_v5wty"]
[ext_resource type="Texture2D" uid="uid://dqyo0j2q7vahi" path="res://images/objets/echelle.png" id="8_55sy8"]
[ext_resource type="Texture2D" uid="uid://dcqc70iuw7ehs" path="res://images/objets/fenetres.png" id="9_qrgxg"]
[ext_resource type="Texture2D" uid="uid://cvcfluf1x6yir" path="res://images/objets/litsss.png" id="10_h626l"]
[ext_resource type="Texture2D" uid="uid://ltio6m3ci05w" path="res://images/objets/cadres.png" id="11_qrgxg"]
[ext_resource type="Texture2D" uid="uid://cy2avbbdm4aua" path="res://images/objets/litss.png" id="11_tc5pd"]
[ext_resource type="Texture2D" uid="uid://dqa41nn1meilq" path="res://images/objets/lits.png" id="12_vhoup"]
[ext_resource type="Texture2D" uid="uid://brbdrunvr4mc5" path="res://images/objets/lit.png" id="13_vh6yv"]
[ext_resource type="Texture2D" uid="uid://dvg4ivoyt5akj" path="res://images/objets/armoire.png" id="14_50fd6"]
[ext_resource type="Texture2D" uid="uid://c66ycqdg3bvg" path="res://images/objets/tiroires.png" id="15_8llas"]
[ext_resource type="Texture2D" uid="uid://l64hotul1wy2" path="res://images/objets/commode.png" id="16_vstbb"]
[ext_resource type="Texture2D" uid="uid://b143tvms3bb6g" path="res://images/objets/plante.png" id="17_4jixw"]
[ext_resource type="Texture2D" uid="uid://bes78ig7y1pxo" path="res://images/objets/plant.png" id="18_cov5p"]
[ext_resource type="Texture2D" uid="uid://wnqj4fijloxs" path="res://images/objets/coffre.png" id="18_h626l"]
[ext_resource type="Texture2D" uid="uid://m4it33exsaip" path="res://images/persos/pnj.png" id="19_8u11d"]
[ext_resource type="PackedScene" uid="uid://ch4cj4idb4k6u" path="res://scenes/rideaux.tscn" id="20_u3qfv"]
[ext_resource type="PackedScene" uid="uid://desayygj01mym" path="res://scenes/menu.tscn" id="22_kg6df"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iiou1"]
texture = ExtResource("3_u3qfv")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_otixg"]
texture = ExtResource("4_miur2")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ognt1"]
tile_size = Vector2i(70, 70)
sources/0 = SubResource("TileSetAtlasSource_iiou1")
sources/2 = SubResource("TileSetAtlasSource_otixg")

[node name="graphics" type="Node2D"]
script = ExtResource("1_xkn22")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAACAAQAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAADAAQAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD8/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAD//wIAAAAAAAAAAAD+/wIAAAAAAAAAAAD9/wIAAAAAAAAAAAD8/wIAAAAAAAAAAAABAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAD//wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAABAAMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD8/wgAAAAAAAAAAAD9/wgAAAAAAAAAAAD+/wgAAAAAAAAAAAD//wgAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAYAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAD//wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wQAAAAAAAAAAAD9/wQAAAAAAAAAAAD8/wQAAAAAAAAAAAD//wQAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAD9/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAEAAYAAAAAAAAAAAADAAYAAAAAAAAAAAABAAcAAAAAAAAAAAAAAAcAAAAAAAAAAAD//wcAAAAAAAAAAAD+/wcAAAAAAAAAAAD9/wcAAAAAAAAAAAD8/wcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wYAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wAAAAAAAAAAAAD6////AgAAAAAAAAD7////AgAAAAAAAAD8////AgAAAAAAAAD9////AgAAAAAAAAD+////AgAAAAAAAAD/////AgAAAAAAAAAAAP//AgAAAAAAAAABAP//AgAAAAAAAAACAP//AgAAAAAAAAADAP//AgAAAAAAAAAEAP//AgAAAAAAAAAFAP//AgAAAAAAAAAGAP//AgAAAAAAAAAHAP//AgAAAAAAAAAIAP//AgAAAAAAAAAIAP7/AgAAAAAAAAAIAP3/AgAAAAAAAAAIAPz/AgAAAAAAAAAHAPz/AgAAAAAAAAAGAPz/AgAAAAAAAAAFAPz/AgAAAAAAAAAEAPz/AgAAAAAAAAADAPz/AgAAAAAAAAACAPz/AgAAAAAAAAABAPz/AgAAAAAAAAAAAPz/AgAAAAAAAAD///z/AgAAAAAAAAD+//z/AgAAAAAAAAD9//z/AgAAAAAAAAD8//z/AgAAAAAAAAD7//z/AgAAAAAAAAD6//z/AgAAAAAAAAD6//3/AgAAAAAAAAD6//7/AgAAAAAAAAD7//7/AgAAAAAAAAD8//7/AgAAAAAAAAD9//7/AgAAAAAAAAD+//7/AgAAAAAAAAD///7/AgAAAAAAAAAAAP7/AgAAAAAAAAABAP7/AgAAAAAAAAACAP7/AgAAAAAAAAADAP7/AgAAAAAAAAADAP3/AgAAAAAAAAAEAP3/AgAAAAAAAAAFAP3/AgAAAAAAAAAGAP3/AgAAAAAAAAAHAP3/AgAAAAAAAAAHAP7/AgAAAAAAAAAGAP7/AgAAAAAAAAAFAP7/AgAAAAAAAAAEAP7/AgAAAAAAAAACAP3/AgAAAAAAAAABAP3/AgAAAAAAAAAAAP3/AgAAAAAAAAD///3/AgAAAAAAAAD+//3/AgAAAAAAAAD9//3/AgAAAAAAAAD8//3/AgAAAAAAAAD7//3/AgAAAAAAAAAJAPz/AgAAAAAAAAAJAP3/AgAAAAAAAAAJAP7/AgAAAAAAAAAJAP//AgAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAALAAcAAAAAAAAAAAALAAYAAAAAAAAAAAALAAUAAAAAAAAAAAALAAQAAAAAAAAAAAALAAMAAAAAAAAAAAALAAIAAAAAAAAAAAALAAEAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAANAAgAAAAAAAAAAAANAAcAAAAAAAAAAAANAAYAAAAAAAAAAAANAAUAAAAAAAAAAAANAAQAAAAAAAAAAAANAAMAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAAAAAAAAAAAAAAKAPz/AgAAAAAAAAALAPz/AgAAAAAAAAAMAPz/AgAAAAAAAAANAPz/AgAAAAAAAAANAP3/AgAAAAAAAAANAP7/AgAAAAAAAAANAP//AgAAAAAAAAAOAP7/AgAAAAAAAAAOAP//AgAAAAAAAAAOAP3/AgAAAAAAAAAOAPz/AgAAAAAAAAAMAP3/AgAAAAAAAAALAP3/AgAAAAAAAAAKAP3/AgAAAAAAAAAKAP7/AgAAAAAAAAALAP7/AgAAAAAAAAALAP//AgAAAAAAAAAMAP//AgAAAAAAAAAMAP7/AgAAAAAAAAAKAP//AgAAAAAAAAA=")
tile_set = SubResource("TileSet_ognt1")

[node name="Tapis" type="Node" parent="."]

[node name="PetitTapis" type="Sprite2D" parent="Tapis"]
position = Vector2(984, 301)
scale = Vector2(7.57692, 7.57692)
texture = ExtResource("1_q8fnq")

[node name="GrandTapis" type="Sprite2D" parent="Tapis"]
position = Vector2(347, 269)
scale = Vector2(7.11905, 7.11905)
texture = ExtResource("2_8u11d")

[node name="Stuff" type="Node" parent="."]

[node name="Lampe" type="Sprite2D" parent="Stuff"]
z_index = 3
position = Vector2(-345, 197)
scale = Vector2(0.433562, 0.363744)
texture = ExtResource("6_55sy8")
region_enabled = true
region_rect = Rect2(369, 238, 365, 633)

[node name="Tabouret" type="Sprite2D" parent="Stuff"]
position = Vector2(233, 437)
scale = Vector2(7.27778, 7.27778)
texture = ExtResource("5_xkn22")

[node name="Table" type="Sprite2D" parent="Stuff"]
position = Vector2(102, 429)
scale = Vector2(5.83333, 5.83333)
texture = ExtResource("6_kg6df")

[node name="Pouf" type="Sprite2D" parent="Stuff"]
position = Vector2(388, 10)
scale = Vector2(5.49375, 4.07738)
texture = ExtResource("7_v5wty")

[node name="Echelle" type="Sprite2D" parent="Stuff"]
z_index = 2
position = Vector2(-50.6875, -35.4123)
scale = Vector2(7.15761, 7.79898)
texture = ExtResource("8_55sy8")

[node name="Cadres" type="Sprite2D" parent="Stuff"]
position = Vector2(-321, -198)
scale = Vector2(5, 5)
texture = ExtResource("11_qrgxg")
region_enabled = true
region_rect = Rect2(20.7523, 17.9291, 29.9093, 22.5998)

[node name="Fenetres" type="Sprite2D" parent="Stuff"]
position = Vector2(443, -166)
scale = Vector2(6.77174, 6.77174)
texture = ExtResource("9_qrgxg")

[node name="rideaux" parent="Stuff/Fenetres" instance=ExtResource("20_u3qfv")]
top_level = true
position = Vector2(281, -295)

[node name="Lits2" type="Node" parent="."]

[node name="Litsss" type="Sprite2D" parent="Lits2"]
position = Vector2(926, -27)
scale = Vector2(7.20161, 7.29839)
texture = ExtResource("10_h626l")

[node name="Litss" type="Sprite2D" parent="Lits2"]
position = Vector2(928, 430)
scale = Vector2(7.29839, 7.29839)
texture = ExtResource("11_tc5pd")

[node name="Lits" type="Sprite2D" parent="Lits2"]
z_index = 3
position = Vector2(-297, 363)
scale = Vector2(7.18548, 7.18548)
texture = ExtResource("12_vhoup")

[node name="Lit" type="Sprite2D" parent="Lits2"]
position = Vector2(-307, 128)
scale = Vector2(6.95161, 6.95161)
texture = ExtResource("13_vh6yv")

[node name="Rangement" type="Node" parent="."]

[node name="Coffre" type="Sprite2D" parent="Rangement"]
top_level = true
z_index = 3
position = Vector2(-81, -213)
scale = Vector2(7.96667, 6.94444)
texture = ExtResource("18_h626l")
region_enabled = true
region_rect = Rect2(29.2042, 21.3239, 15.1641, 9.34129)

[node name="Armoire2" type="Sprite2D" parent="Rangement"]
position = Vector2(126, -96)
scale = Vector2(8.01786, 8.06876)
texture = ExtResource("14_50fd6")

[node name="Armoire3" type="Sprite2D" parent="Rangement"]
position = Vector2(-81, -90)
scale = Vector2(8.11309, 8.11309)
texture = ExtResource("14_50fd6")

[node name="Tiroires" type="Sprite2D" parent="Rangement"]
position = Vector2(-325, -19)
scale = Vector2(4.38889, 4.38889)
texture = ExtResource("15_8llas")

[node name="Commode" type="Sprite2D" parent="Rangement"]
position = Vector2(615, -15)
scale = Vector2(6.41667, 6.41667)
texture = ExtResource("16_vstbb")

[node name="Plantes" type="Node" parent="."]

[node name="Plant" type="Sprite2D" parent="Plantes"]
position = Vector2(478, 459)
scale = Vector2(11.3889, 9.5)
texture = ExtResource("18_cov5p")

[node name="Plante" type="Sprite2D" parent="Plantes"]
position = Vector2(-106, 473)
scale = Vector2(5.625, 5.625)
texture = ExtResource("17_4jixw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(314, 134)
zoom = Vector2(0.78, 0.78)

[node name="pnj" type="Node" parent="."]

[node name="Pnj2" type="Sprite2D" parent="pnj"]
top_level = true
position = Vector2(86, 156)
scale = Vector2(0.685, 0.72)
texture = ExtResource("19_8u11d")

[node name="Pnj" type="Sprite2D" parent="pnj"]
top_level = true
position = Vector2(-69, 201)
scale = Vector2(0.685, 0.72)
texture = ExtResource("19_8u11d")

[node name="Pnj3" type="Sprite2D" parent="pnj"]
top_level = true
position = Vector2(-148, 380)
scale = Vector2(0.685, 0.72)
texture = ExtResource("19_8u11d")

[node name="Menu" parent="." instance=ExtResource("22_kg6df")]
top_level = true
position = Vector2(635, -274)

[node name="CheckCoffre" type="CheckButton" parent="Menu"]
z_index = 2
offset_left = 30.0
offset_top = 411.0
offset_right = 197.0
offset_bottom = 474.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Coffre"

[node name="CheckTapis" type="CheckButton" parent="Menu"]
z_index = 2
offset_left = 30.0
offset_top = 361.0
offset_right = 179.0
offset_bottom = 424.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Tapis"

[node name="CheckTabouret" type="CheckButton" parent="Menu"]
z_index = 3
offset_left = 22.0
offset_top = 213.0
offset_right = 247.0
offset_bottom = 276.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Tabouret"

[node name="CheckPouf" type="CheckButton" parent="Menu"]
offset_left = 24.0
offset_top = 106.0
offset_right = 161.0
offset_bottom = 169.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Pouf"

[node name="CheckArmoire" type="CheckButton" parent="Menu"]
offset_left = 25.0
offset_top = 159.0
offset_right = 231.0
offset_bottom = 222.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Armoire"

[node name="CheckPlante1" type="CheckButton" parent="Menu"]
offset_left = 21.0
offset_top = 262.0
offset_right = 225.0
offset_bottom = 325.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Plante 1"

[node name="CheckPlante2" type="CheckButton" parent="Menu"]
offset_left = 24.0
offset_top = 311.0
offset_right = 228.0
offset_bottom = 374.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Plante 2
"

[node name="CheckLampes" type="CheckButton" parent="Menu"]
offset_left = 27.0
offset_top = 471.0
offset_right = 231.0
offset_bottom = 534.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Lampe"

[node name="CheckEchelle" type="CheckButton" parent="Menu"]
z_index = 2
offset_left = 25.0
offset_top = 521.0
offset_right = 209.0
offset_bottom = 584.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "Echelle"
